--- a/assets/styles/_lista.scss
+++ b/assets/styles/_lista.scss
@@ -1,6 +1,6 @@
 div.lista{
     margin-top: 10px;
-    padding: 5px;
+    padding: 25px;
     display: flex;
     flex-wrap: wrap;
     justify-content: flex-start;
@@ -9,10 +9,9 @@ div.lista{
 div.item{
     text-align: center;
     padding: 10px;
-    width: 200px;
+    width: 220px;
     border: 2px solid #B22222;
-    margin: 10px;
-    border-radius: 5px;
+    background-color: rgba(0, 0, 0, 0.526);
     color: #F8F8FF;
     transition: 0.5s;
 }
