--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -38,7 +38,7 @@ form button {
   background-color: #B22222;
   color: black;
   border: none;
-  border-radius: 10px;
+  border-radius: 20px;
   margin-left: 8px;
   transition: 0.5s;
 }
@@ -50,7 +50,7 @@ form button:hover {
 
 div.lista {
   margin-top: 10px;
-  padding: 5px;
+  padding: 25px;
   display: flex;
   flex-wrap: wrap;
   justify-content: flex-start;
@@ -59,10 +59,9 @@ div.lista {
 div.item {
   text-align: center;
   padding: 10px;
-  width: 200px;
+  width: 220px;
   border: 2px solid #B22222;
-  margin: 10px;
-  border-radius: 5px;
+  background-color: rgba(0, 0, 0, 0.526);
   color: #F8F8FF;
   transition: 0.5s;
 }
@@ -81,8 +80,34 @@ body {
   font-family: "Poppins", sans-serif;
 }
 
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
 .marca {
   color: rgba(240, 248, 255, 0.493);
   text-align: center;
   margin: 20px;
+}
+
+@media screen and (max-width: 600px) {
+  div.lista {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  form {
+    height: 40px;
+  }
+}
+@media screen and (max-width: 900px) and (min-width: 600px) {
+  div.lista {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  form {
+    height: 50px;
+  }
 }/*# sourceMappingURL=index.css.map */
